src/app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

.header {
  background-image: url(https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
  background-color: #42bfdd;
  min-height: 100vh;
  width: 100%;
  background-blend-mode: multiply;
  background-size: cover;
  opacity: 0.7;
}

/* FOOTER */
.footer {
  min-height: 40vh;
  background-color: #084b83;
  opacity: 0.8;
  text-align: center;
}
.linkfooter {
  color: #ffffff;
  text-decoration: none;
}
.footerLogo {
  color: #ffffff;
  font-family: "Pacifico", cursive;
  font-size: 1.5rem;
  margin: 0;
}
.navbarLogo {
  color: #ffffff;
  font-family: "Pacifico", cursive;
  font-size: 1.5rem;
  margin: 0;
}
.copyright {
  color: #ffffff;
}
.footer-icon {
  font-size: 1.5rem;
}
.footer-icon:hover {
  color: #42bfdd;
  cursor: pointer;
}

.title {
  margin: 0;
  text-align: center;
  padding-top: 40vh;
  color: #ffffff;
  font-family: "Roboto", cursive;
}
.subtitle {
  font-size: 1.5rem;
  color: #ffffff;
  text-align: center;
}

.links-footer {
  padding-top: 2em;
  line-height: 25px;
}


/* HOMEPAGE DESKTOP */
@media (min-width: 600px) {
  .title {
    font-size: 6em;
  }
  .footerLogo {
    font-size: 3rem;
  }
  .footer {
    display: flex;
    justify-content: space-evenly;
    text-align: left;
  }
  .links-footer {
    padding-top: 2em;
    line-height: 25px;
  }
}


@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

